# neuron

./: .gitignore  Cargo.toml  FLOW.md  README.md  docker-compose.override.yml  docker-compose.yml
.cargo/: config.toml
bins/api/: Cargo.toml  Dockerfile
bins/api/src/: config.rs  context.rs  error.rs  main.rs
bins/api/src/routes/: mod.rs
bins/api/src/routes/agents/: connect.rs  create.rs
bins/api/src/routes/chats/: messages.rs
bins/api/src/routes/console/: get.rs
bins/api/src/routes/messages/: events.rs  get.rs  mod.rs
bins/api/src/views/: message.rs
bins/api/templates/: base.html
bins/api/templates/console/: page.html
bins/broker/: Cargo.toml  Dockerfile
bins/broker/src/: config.rs  context.rs  main.rs
bins/broker/src/extract/: agent.rs  json.rs  mod.rs
bins/broker/src/routes/: mod.rs
bins/broker/src/routes/agents/: connect.rs  create.http  create.rs  mod.rs
bins/broker/src/routes/console/: connect.rs  mod.rs
bins/broker/src/routes/messages/: create.http  create.rs
bins/broker/static/: console-reducer.js  console-reducer.test.js  console.css  console.js  console.test.js
bins/broker/templates/: base.html
bins/broker/templates/console/: index.html  page.html
bins/executor/: Cargo.toml  Dockerfile
bins/executor/src/: config.rs  context.rs  error.rs  main.rs
bins/executor/src/__events__/: log.rs  message.rs  mod.rs  task.rs
bins/executor/src/events/: actor.rs  job.rs  log.rs  message.rs  mod.rs  task.rs
bins/executor/src/events/actor/: update.rs
bins/worker/: Cargo.toml  Dockerfile
bins/worker/src/: config.rs  context.rs  main.rs  routing.rs
bins/worker/src/events/: actor.rs  actors.rs  mod.rs
bins/worker/src/events/messages/: inbound.rs  mod.rs
crates/ai/: Cargo.toml
crates/ai/src/: error.rs  lib.rs
crates/ai/src/clients/fs/: repository.rs
crates/ai/src/clients/hf/: repository.rs
crates/ai/src/clients/http/: repository.rs
crates/ai/src/clients/openai/: client.rs
crates/ai/src/models/: capability.rs  loaded.rs  loader.rs  mod.rs  model_id.rs  provider.rs  remote.rs  tokenizer.rs
crates/ai/src/models/bart/: summarizer.rs
crates/ai/src/models/bert/: config.rs  embedder.rs  model.rs  token_classifier.rs
crates/ai/src/models/distilbert/: config.rs  model.rs  sequence_classifier.rs
crates/ai/src/pipelines/: cache.rs  mod.rs  routines.rs
crates/ai/src/pipelines/common/: batch.rs
crates/ai/src/pipelines/generate/: mod.rs
crates/ai/src/resources/: cache.rs  loader.rs  mod.rs  provider.rs  uri.rs
crates/ai/src/tasks/: aggregation.rs  bioes.rs  keybert.rs  mod.rs
crates/ai/src/types/: annotation.rs  artifact.rs
crates/amqp/: Cargo.toml
crates/amqp/src/: consumer.rs  error.rs  event.rs  key.rs  lib.rs  producer.rs  socket.rs
crates/amqp/tests/: topic.rs
crates/cortex/: Cargo.toml
crates/cortex/src/: error.rs  lib.rs
crates/cortex/src/actions/: embed.rs  entities.rs  keywords.rs  mod.rs  pii.rs  sentiment.rs  summarization.rs
crates/cortex/src/predicates/: equal.rs  mod.rs
crates/cortex/src/routines/: embeddings.rs  entity_extraction.rs  keyword_extraction.rs  mod.rs  pii_extraction.rs  sentiment.rs  summarization.rs
crates/cortex/src/types/: annotation.rs  artifact.rs  input.rs  mod.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/reflect/: Cargo.toml
crates/reflect/benches/: BASELINE.md  reflect_bench.rs
crates/reflect/macros/: Cargo.toml
crates/reflect/macros/src/: lib.rs  reflect_enum.rs  reflect_field.rs  reflect_generics.rs  reflect_impl.rs  reflect_meta.rs  reflect_mod.rs  reflect_struct.rs  reflect_trait.rs  reflect_visibility.rs
crates/reflect/macros/src/parse/: meta_data.rs
crates/reflect/src/: lib.rs  meta_data.rs  param.rs
crates/reflect/src/bound/: lifetime.rs
crates/reflect/src/types/: slice.rs
crates/reflect/src/values/: map.rs  slice.rs
crates/reflect/tests/: map_tests.rs  struct_tests.rs  trait_tests.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 001_create_messages.sql  002_create_message_annotations.sql  003_create_message_artifacts.sql  004_create_jobs.sql  005_create_messages_jobs.sql  006_create_logs.sql  010_create_actors.sql  020_create_chats.sql  030_create_messages.sql  032_create_artifacts.sql  040_create_tasks.sql  042_create_annotations.sql  050_create_events.sql  060_create_logs.sql  060_create_skills.sql  060_create_vector_search_indexes.sql  070_create_agents.sql  070_create_console_event_replay_index.sql  070_create_task_events.sql
crates/storage/src/: actor.rs  annotation.rs  artifact.rs  chat.rs  error.rs  event.rs  job.rs  lib.rs  log.rs  message.rs  project.rs  projection.rs  search.rs  skill.rs  task.rs
crates/storage/src/logs/: mod.rs  project.rs  query.rs
crates/storage/src/rows/: actor.rs  agent.rs  annotation.rs  artifact.rs  chat.rs  event.rs  message.rs  mod.rs  skill.rs  task.rs
crates/storage/src/types/: annotation.rs  artifact.rs  job.rs  log.rs  message.rs  message_source.rs  mod.rs  task.rs
crates/storage/tests/: console_events.rs
crates/types/: Cargo.toml
crates/types/src/: actors.rs  chats.rs  data.rs  events.rs  lib.rs  logs.rs  secret.rs  skills.rs  tasks.rs
crates/types/src/data/: content.rs  meta.rs  mod.rs
crates/types/src/resources/: annotation.rs  artifact.rs  mod.rs
docs/: 00.storage.md
src/: main.rs
src/routes/: mod.rs
src/routes/chats/: messages.http  messages.rs
src/routes/console/: get.rs
templates/console/: page.html
