[workspace]
resolver = "3"
members = [".", "crates/*"]
default-members = [".", "crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"

[package]
name = "neuron"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
actix-web = "4"
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["default", "derive"] }
serde_json = { version = "1" }
serde_valid = { version = "2" }
serde_with = { version = "3", features = ["macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "json"] }
rust-bert = { version = "0.23", features = ["onnx"] }
ort = { version = "1.16.3", features = ["download-binaries"] }
tch = "0.17"
console = "0.16"

storage.path = "crates/storage"

[patch.crates-io]
ort = { git = "https://github.com/pykeio/ort.git", tag = "v1.16.3" }
