[workspace]
resolver = "3"
members = ["bins/*", "crates/*"]
default-members = ["bins/*", "crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"

[workspace.lints.clippy]
type_complexity = "allow"

[patch.crates-io]
ort = { git = "https://github.com/pykeio/ort.git", tag = "v1.16.3" }
