[package]
name = "neuron"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
actix-web = "4"
askama = "0.16"
serde = { version = "1", features = ["default", "derive"] }
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["migrate"] }

amqp = { path = "../../crates/amqp" }
storage = { path = "../../crates/storage" }
