[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
actix-web = "4"
bytes = "1"
futures-util = "0.3"
serde_json = "1"
askama = "0.16"
serde = { version = "1", features = ["default", "derive"] }
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["migrate", "postgres"] }

amqp = { path = "../../crates/amqp" }
storage = { path = "../../crates/storage" }
