[package]
name = "broker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
actix-web = "4"
actix-ws = "0.4"
bytes = "1"
futures-util = "0.3"
serde_json = "1"
serde_valid = "2"
serde = { version = "1", features = ["default", "derive"] }
askama = { version = "0.16", features = ["serde_json"] }
tokio = { version = "1", features = ["macros", "sync", "time"] }
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["migrate", "postgres"] }

amqp = { path = "../../crates/amqp" }
error = { path = "../../crates/error", features = ["storage", "web"] }
storage = { path = "../../crates/storage" }
types = { path = "../../crates/types" }
