[package]
name = "executor"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["default", "derive"] }
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }

amqp = { path = "../../crates/amqp" }
