[package]
name = "executor"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["default", "derive"] }
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["postgres"] }
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }

amqp = { path = "../../crates/amqp" }
storage = { path = "../../crates/storage" }
