[package]
name = "ai"
description = "AI routines (embeddings, entities, keywords, PII, sentiment, summarization)"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[features]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
mkl = ["candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1" }
candle-core = { version = "0.11" }
candle-nn = { version = "0.11" }
candle-transformers = { version = "0.11" }
tokenizers = { version = "0.22" }
hf-hub = { version = "0.5" }
reqwest = { version = "0.13", features = ["json", "blocking"] }
url = { version = "2" }

error = { path = "../error" }

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.11", features = ["accelerate"] }
candle-nn = { version = "0.11", features = ["accelerate"] }
candle-transformers = { version = "0.11", features = ["accelerate"] }

[target.'cfg(all(target_arch = "x86_64", target_os = "linux"))'.dependencies]
candle-core = { version = "0.11", features = ["mkl"] }
candle-nn = { version = "0.11", features = ["mkl"] }
candle-transformers = { version = "0.11", features = ["mkl"] }
