[package]
name = "amqp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
lapin = "2"
futures-lite = "2"
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["default", "derive"] }
serde_json = { version = "1" }
