[package]
name = "amqp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
lapin = "2"
futures-lite = "2"
serde = { version = "1", features = ["default", "derive"] }
serde_json = { version = "1" }

error = { path = "../error", features = ["amqp"] }
types = { path = "../types" }
