[package]
name = "cortex"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
ort = { version = "1.16.3", features = ["download-binaries"] }
tch = { version = "0.17" }
console = { version = "0.16" }
rust-bert = { version = "0.23", features = ["onnx"] }
serde = { version = "1", features = ["derive", "rc"] }
