[package]
name = "error"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[features]
default = []
web = ["dep:actix-web"]
ai = ["dep:candle-core", "dep:reqwest", "dep:url"]
amqp = ["dep:lapin"]
storage = ["dep:sqlx"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_valid = { version = "2" }

actix-web = { version = "4", optional = true }
candle-core = { version = "0.11", optional = true }
lapin = { version = "2", optional = true }
reqwest = { version = "0.13", default-features = false, optional = true }
sqlx = { version = "0.8", default-features = false, optional = true }
url = { version = "2.5", optional = true }
