[package]
name = "reflect"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[features]
macros = ["reflect-macros"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive", "rc"], optional = true }
reflect-macros = { path = "./macros", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
dhat = { version = "0.3" }
serde_json = { version = "1" }
valuable = { version = "0.1", features = ["derive"] }
reflect-macros = { path = "./macros" }

[[bench]]
name = "reflect_bench"
harness = false
